updated python script nd wrkflow

--- a/.github/workflows/sync-configmap.yml
+++ b/.github/workflows/sync-configmap.yml
@@ -26,6 +26,6 @@ jobs:
         run: python scripts/sync_configmap.py
         env:
           OLLAMA_HOST: http://localhost:11434
-          MODEL: mistral
+          MODEL: llama2
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
